# romann

./: .gitignore  .windsurfrules  CHANGELOG.md  README.md  hiragana_english.json  katakana_english.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  pypi-release.yml  python-package.yml
scripts/: check_pykakasi_new.py
src/: __init__.py  romann.py
src/romann/: __init__.py  hiragana_english.json  romann.py
tests/: test_romann.py
