[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "romann"
version = "0.1.2"
description = "日本語→自然なローマ字・英語変換ライブラリ（kakasi/SudachiPyベース＋外来語辞書対応）"
authors = [
    { name = "ykuwa" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "pykakasi",
    "jaconv",
    "sudachipy",
    "sudachidict_core"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "pylint",
    "black"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["romann"]
include-package-data = true

[tool.setuptools.package-data]
romann = ["hiragana_english.json", "katakana_english.json"]
